# Yolo-resnet-cpp-TensorRT

./: .gitignore  CMakeLists.txt  README.md  c.py  export_resnet_onnx.py  main.cpp
include/: postprocess.h  preprocess.h  types.h  wrapper.h  yolov11_detector.h
include/core/: engine_builder.h  model_base.h
include/models/: classification_model.h  detection_model.h  segmentation_model.h
src/: postprocess.cu  preprocess.cu  wrapper.cpp  yolov11.cpp  yolov11_detector.cpp
src/core/: engine_builder.cpp  model_base.cpp
src/models/: classification_model.cpp  detection_model.cpp  segmentation_model.cpp
